<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextView_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/du_an_cntt_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/TextView_Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/c120"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextView_DataTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_29_04_2022_21_00"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchUI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>